tests/NormalTests/paczka1/fuzzy1/67736591.err
Error in line 6: H5JM4 A364 32,6
Error in line 10: EzC0V7Kp S134 63,1
Error in line 9: H5JM4 S744 46,1
Error in line 5: BMNhU4H A364 62,2
Error in line 22: S716 S716 27,40
Error in line 24: wRrfEYf8nBu S744 364,@
Error in line 26: H5JM4 A364 97,8
Error in line 4: S716 S716 86,9
Error in line 38: H5JM4 S716 51,1
